--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,22 +1,21 @@
-
-/****************
-Author: Aga S.
-Date: Sept 2020 
-*********************/
-
-/*Style all p tags*/
+/*TARGETING ELEMENTS /TAGS */
 p {
-   font-size: 18px;
-   color: red;
+    font-size: 12px;
+    color: red;
 }
- /*
-#header p {
-   font-size: 14px;
-}
- */
 
-/*style all header tags*/
- 
+a {
+    text-decoration: underline;
+    color: blue;
+}
+span {
+    text-transform: uppercase;
+}
 h1 {
-   font-size: 44px;
+    font-size:  32px;
+}
+
+div {
+    width: 100%;
+    background-color: grey;
 }
