--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,21 +1,18 @@
 /*TARGETING ELEMENTS /TAGS */
-p {
-    font-size: 12px;
-    color: red;
+h2 {
+    font-size: 24px;
 }
 
-a {
-    text-decoration: underline;
+#content-header {
+        font-size: 18ps;
+        color: red;
+}
+
+span {
+    display: block;
     color: blue;
 }
-span {
-    text-transform: uppercase;
-}
-h1 {
-    font-size:  32px;
-}
 
-div {
-    width: 100%;
-    background-color: grey;
+.deck {
+    color: red;
 }
