--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,15 +1,6 @@
-#main-content p {
-    color: red;
-}
-
 p {
-    color: black;
+    color: red !important;
 }
-.test {
-    color: green;
-
-}
-
-strong {
+#main-content p {
     color: green;
 }
