--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,7 +1,12 @@
-article p:first-of-type {
+li:nth-child(1), li:nth-child(5) {
     font-weight: bold;
 }
-
-article p:last-of-type {
-    color: green;
+li:nth-child(even) {
+    background: grey;
+}
+li:nth-child(odd) {
+    background: pink;
+}
+li:nth-child(2n + 1) {
+    color: yellow;
 }
