--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,11 +1,9 @@
-/*inheritance used*/
-article {
-    font-size: 16px;
-}
-article h2 {
-    font-size: 4em;
-}
+a  {
+    text-decoration:line-through;
+    }
 
-article p {
-    font-size: 50%;
-}
+    article h2, article p {
+        font-family: arial;
+     }
+     
+    
