--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,11 +1,11 @@
-h1 {
-    font-weight: normal;
+#header p {
+    text-transform: capitalize
 }
-/*
-p {
-   font-weight: lighter; 
-    font-family: "Yu Gothic";
-}*/
-p {
-    font-weight: 900;
+
+body {
+text-transform: uppercase;
+
+}
+body > p {
+    text-transform: none;
 }
