--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,10 +1,13 @@
 .box {
-    margin: 30px;
+    /*margin: 30px 20px 15px 5px;
+    margin: 30px 15px;
+    padding: 30px;
+    border: 1px solid #000; */
+}
+ 
+
+.box {
+    margin: 30px 15px 30px;
     padding: 30px;
     border: 1px solid #000;
-   /* width: 480px;
-    height: 200px;*/
-    /*width: 100%;*/
-    width: 200px;
-    height: 200px;
 }
