--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,13 +1,7 @@
 .box {
-    /*margin: 30px 20px 15px 5px;
-    margin: 30px 15px;
-    padding: 30px;
-    border: 1px solid #000; */
-}
- 
-
-.box {
-    margin: 30px 15px 30px;
+    /*margin: 30px auto 30px;*/
+    margin: 30px 25%;
     padding: 30px;
     border: 1px solid #000;
+    width: 50%x;
 }
