--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,7 +1,5 @@
 .box {
-    /*margin: 30px auto 30px;*/
-    margin: 30px 25%;
-    padding: 30px;
+    margin: 30px;
+    padding: 10px 20%;
     border: 1px solid #000;
-    width: 50%x;
 }
