--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,5 +1,9 @@
 .box {
-    margin: 30px;
-    padding: 10px 20%;
     border: 1px solid #000;
+    padding: 20px; 
+    margin:10px;   
+}
+
+.small{
+    padding-left:  100px;
 }
