--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,19 +1,31 @@
 #main-content div {
     background-color: #ccc;
     margin: 0 0 20px 0;
-}
 
+}
+/*
 .static-width {
     width: 300px;
     height: 100px;
+    border-radius: 30px;;
 }
 .percentage-width {
     width: 70%;
     height: 50px;
+    /*below you can control every corner*/
+    border-radius: 5px 10px 20px 40px;
 }
 
 .inline-block {
     width: 40%;
     display: inline-block;
-    
+    border-radius: 10px 20px;
+    /*bit complicated /opposites but diffrent than margin*/
+}
+
+.inline-block { /*circle*/
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    margin: 15px;
 }
