--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,31 +1,14 @@
-#main-content div {
-    background-color: #ccc;
-    margin: 0 0 20px 0;
-
-}
-/*
 .static-width {
     width: 300px;
-    height: 100px;
-    border-radius: 30px;;
-}
-.percentage-width {
-    width: 70%;
-    height: 50px;
-    /*below you can control every corner*/
-    border-radius: 5px 10px 20px 40px;
-}
+    height: 300px;
+    background-color:#606060;
+    background-image: url(https://www.w3schools.com/w3css/img_lights.jpg);
+    /*background-repeat: round; */
+    background-repeat: no-repeat;
+    /* full pictures; it goes around, not cut off at edges: background-repeat: round; */
+    background-position: center;
+    background-position: 20% 10%;
+    background-position: 5px 50px;
+    background-size: 300px;
 
-.inline-block {
-    width: 40%;
-    display: inline-block;
-    border-radius: 10px 20px;
-    /*bit complicated /opposites but diffrent than margin*/
-}
-
-.inline-block { /*circle*/
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    margin: 15px;
 }
