--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,8 +1,13 @@
-.static-width {
-    width: 300px;
-    height: 300px;
-    background: url(https://www.w3schools.com/w3css/img_lights.jpg) no-repeat top center;
+#banner {
     background-color: #686868;
-    background-size: 200px
-
+    width: 100%;
+    height: 500px;
+    background-image: url(https://www.w3schools.com/w3css/img_lights.jpg), url(https://www.w3schools.com/w3css/img_lights.jpg);
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, top left;
+    background-size: 300px, 100%;
 }
+
+    /*https://www.w3schools.com/w3css/img_lights.jpg*/
+    
+
