--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,11 +1,8 @@
 #banner {
-    background-color: #686868;
     width: 100%;
-    height: 500px;
-    background-image: url(https://www.w3schools.com/w3css/img_lights.jpg), url(https://www.w3schools.com/w3css/img_lights.jpg);
-    background-repeat: no-repeat, no-repeat;
-    background-position: center, top left;
-    background-size: 300px, 100%;
+    height: 300px;
+   /* background-color:  #ff0709;*/
+   background-color: rgb(255, 255, 200);
 }
 
     /*https://www.w3schools.com/w3css/img_lights.jpg*/
