--- a/css-file/syntax.css
+++ b/css-file/syntax.css
@@ -1,9 +1,40 @@
-#banner {
-    width: 100%;
-    height: 300px;
-   /* background-color:  #ff0709;*/
-   background-color: rgb(255, 255, 200);
+#circle{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgba(200, 200, 100, 0.9);
+    border-radius: 200px;
+    top: 50px;
+    left: 50px;
+    text-align: center;
+
 }
+
+#circle-2{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgb(200, 100, 200);
+    border-radius: 200px;
+    top: 250px;
+    left: 150px;
+    opacity: 0.8;
+    text-align: center;
+    }
+
+ #circle-3 {
+        width: 400px;
+        height: 400px;
+        position: absolute;
+        background: rgba(100, 200, 200, 0.5);
+        border-radius: 200px;
+        top: 50px;
+        left: 250px;
+        text-align: center;
+
+ }
+
+
 
     /*https://www.w3schools.com/w3css/img_lights.jpg*/
     
